Merge branch 'main' of https://github.com/UniversalMediaServer/UniversalMediaServer into extract-subs-for-ffmpeg
# Conflicts:
#	src/main/java/net/pms/PMS.java
#	src/main/java/net/pms/dlna/DLNAMediaDatabase.java
#	src/main/java/net/pms/encoders/FFMpegVideo.java
#	src/main/java/net/pms/network/Request.java
#	src/main/java/net/pms/network/RequestV2.java
#	src/main/java/net/pms/network/UPNPHelper.java
#	src/main/java/net/pms/newgui/RendererPanel.java
#	src/main/java/net/pms/newgui/RestrictedFileSystemView.java
#	src/main/java/net/pms/remote/RemoteBrowseHandler.java
#	src/main/java/net/pms/util/OpenSubtitle.java
#	src/main/java/net/pms/util/SubtitleUtils.java
#	src/main/resources/i18n/messages.properties