@@ -1,62 +1,60 @@
 /*
- * PS3 Media Server, for streaming any medias to your PS3.
- * Copyright (C) 2008  A.Brochard
+ * This file is part of Universal Media Server, based on PS3 Media Server.
  *
- * This program is free software; you can redistribute it and/or
- * modify it under the terms of the GNU General Public License
- * as published by the Free Software Foundation; version 2
- * of the License only.
+ * This program is a free software; you can redistribute it and/or modify it
+ * under the terms of the GNU General Public License as published by the Free
+ * Software Foundation; version 2 of the License only.
  *
- * This program is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT
+ * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
+ * details.
  *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ * You should have received a copy of the GNU General Public License along with
+ * this program; if not, write to the Free Software Foundation, Inc., 51
+ * Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
  */
 package net.pms.dlna;
 
-import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import com.sun.jna.Platform;
-import com.sun.jna.platform.win32.Shell32Util;
-import com.sun.jna.platform.win32.Win32Exception;
 import java.io.*;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.sql.Connection;
 import java.text.Collator;
 import java.text.Normalizer;
 import java.util.*;
 import javax.annotation.Nonnull;
-import javax.annotation.Nullable;
 import javax.annotation.concurrent.GuardedBy;
 import net.pms.Messages;
 import net.pms.PMS;
-import net.pms.configuration.MapFileConfiguration;
-import net.pms.configuration.RendererConfiguration;
+import net.pms.configuration.RendererConfigurations;
+import net.pms.configuration.sharedcontent.FeedAudioContent;
+import net.pms.configuration.sharedcontent.FeedImageContent;
+import net.pms.configuration.sharedcontent.FeedVideoContent;
+import net.pms.configuration.sharedcontent.FolderContent;
+import net.pms.configuration.sharedcontent.SharedContent;
+import net.pms.configuration.sharedcontent.SharedContentConfiguration;
+import net.pms.configuration.sharedcontent.SharedContentWithPath;
+import net.pms.configuration.sharedcontent.StreamAudioContent;
+import net.pms.configuration.sharedcontent.StreamContent;
+import net.pms.configuration.sharedcontent.StreamVideoContent;
+import net.pms.configuration.sharedcontent.VirtualFolderContent;
+import net.pms.database.MediaDatabase;
+import net.pms.database.MediaTableFiles;
+import net.pms.dlna.virtual.MediaLibrary;
 import net.pms.dlna.virtual.VirtualFolder;
+import net.pms.dlna.virtual.VirtualFolderDbId;
 import net.pms.dlna.virtual.VirtualVideoAction;
-import net.pms.formats.Format;
-import net.pms.io.BasicSystemUtils;
+import net.pms.gui.GuiManager;
 import net.pms.io.StreamGobbler;
-import net.pms.newgui.IFrame;
-import net.pms.newgui.SharedContentTab;
-import net.pms.platform.macos.NSFoundation;
-import net.pms.platform.macos.NSFoundation.NSSearchPathDirectory;
-import net.pms.platform.macos.NSFoundation.NSSearchPathDomainMask;
-import net.pms.platform.windows.CSIDL;
-import net.pms.platform.windows.GUID;
-import net.pms.platform.windows.KnownFolders;
+import net.pms.platform.PlatformUtils;
+import net.pms.service.LibraryScanner;
 import net.pms.util.CodeDb;
-import net.pms.util.FilePermissions;
 import net.pms.util.FileUtil;
 import net.pms.util.FileWatcher;
 import net.pms.util.ProcessUtil;
@@ -74,11 +72,35 @@ public class RootFolder extends DLNAResource {
 	private boolean running;
 	private FolderLimit lim;
 	private MediaMonitor mon;
-	private ArrayList<DLNAResource> webFolders;
 
 	public RootFolder() {
 		setIndexId(0);
-		webFolders = new ArrayList<>();
+		addVirtualMyMusicFolder();
+	}
+
+	private void addVirtualMyMusicFolder() {
+		DbIdTypeAndIdent myAlbums = new DbIdTypeAndIdent(DbIdMediaType.TYPE_MYMUSIC_ALBUM, null);
+		VirtualFolderDbId myMusicFolder = new VirtualFolderDbId(Messages.getString("MyAlbums"), myAlbums, "");
+		if (PMS.getConfiguration().displayAudioLikesInRootFolder()) {
+			if (!getChildren().contains(myMusicFolder)) {
+				myMusicFolder.setFakeParentId("0");
+				addChild(myMusicFolder, true, false);
+				LOGGER.debug("adding My Music folder to root");
+			}
+		} else {
+			if (
+				PMS.get().getLibrary().isEnabled() &&
+				PMS.get().getLibrary().getAudioFolder() != null &&
+				PMS.get().getLibrary().getAudioFolder().getChildren() != null &&
+				!PMS.get().getLibrary().getAudioFolder().getChildren().contains(myMusicFolder)
+			) {
+				myMusicFolder.setFakeParentId(PMS.get().getLibrary().getAudioFolder().getId());
+				PMS.get().getLibrary().getAudioFolder().addChild(myMusicFolder, true, false);
+				LOGGER.debug("adding My Music folder to 'Audio' folder");
+			} else {
+				LOGGER.debug("couldn't add 'My Music' folder because the media library is not initialized.");
+			}
+		}
 	}
 
 	@Override
@@ -122,21 +144,16 @@ public class RootFolder extends DLNAResource {
 		}
 
 		if (isAddGlobally && configuration.isShowMediaLibraryFolder()) {
-			DLNAResource libraryRes = PMS.get().getLibrary();
-			if (libraryRes != null) {
+			MediaLibrary libraryRes = PMS.get().getLibrary();
+			if (libraryRes.isEnabled()) {
 				addChild(libraryRes, true);
 			}
 		}
 
 		if (configuration.getUseCache()) {
-			List<Path> foldersMonitored = configuration.getMonitoredFolders();
-			if (foldersMonitored != null && !foldersMonitored.isEmpty()) {
-				File[] dirs = new File[foldersMonitored.size()];
-				int i = 0;
-				for (Path folderMonitored : foldersMonitored) {
-					dirs[i] = new File(folderMonitored.toAbsolutePath().toString().replaceAll("&comma;", ","));
-					i++;
-				}
+			List<File> foldersMonitored = SharedContentConfiguration.getMonitoredFolders();
+			if (!foldersMonitored.isEmpty()) {
+				File[] dirs = foldersMonitored.toArray(File[]::new);
 				mon = new MediaMonitor(dirs);
 			}
 		}
@@ -155,30 +172,31 @@ public class RootFolder extends DLNAResource {
 				addChild(PMS.get().getDynamicPls(), true);
 				if (!configuration.isHideSavedPlaylistFolder()) {
 					File plsdir = new File(configuration.getDynamicPlsSavePath());
-					addChild(new RealFile(plsdir, Messages.getString("VirtualFolder.3")), true);
+					addChild(new RealFile(plsdir, Messages.getString("SavedPlaylists")), true);
 				}
 			}
 		}
 
-		for (DLNAResource r : getConfiguredFolders()) {
+		for (DLNAResource r : getFolderContents()) {
 			addChild(r, true, isAddGlobally);
 		}
+
+		setVirtualFolderContents();
 
 		/**
 		 * Changes to monitored folders trigger a rescan
 		 */
 		if (PMS.getConfiguration().getUseCache()) {
-			for (Path resource : configuration.getMonitoredFolders()) {
-				File file = new File(resource.toString());
+			for (File file : SharedContentConfiguration.getMonitoredFolders()) {
 				if (file.exists()) {
 					if (!file.isDirectory()) {
 						LOGGER.trace("Skip adding a FileWatcher for non-folder \"{}\"", file);
 					} else {
-						LOGGER.trace("Creating FileWatcher for " + resource.toString());
+						LOGGER.trace("Creating FileWatcher for " + file.toString());
 						try {
-							FileWatcher.add(new FileWatcher.Watch(resource.toString() + File.separator + "**", LIBRARY_RESCANNER));
+							FileWatcher.add(new FileWatcher.Watch(file.toString() + File.separator + "**", LIBRARY_RESCANNER));
 						} catch (Exception e) {
-							LOGGER.warn("File watcher access denied for directory {}", resource.toString());
+							LOGGER.warn("File watcher access denied for directory {}", file.toString());
 						}
 					}
 				} else {
@@ -187,34 +205,30 @@ public class RootFolder extends DLNAResource {
 			}
 		}
 
-		for (DLNAResource r : getVirtualFolders()) {
-			addChild(r);
-		}
-
 		if (isAddGlobally) {
-			loadWebConf();
-
-			switch (Platform.getOSType()) {
-				case Platform.MAC:
-					if (configuration.isShowIphotoLibrary()) {
-						DLNAResource iPhotoRes = getiPhotoFolder();
-						if (iPhotoRes != null) {
-							addChild(iPhotoRes);
-						}
+			setExternalContents();
+			int osType = Platform.getOSType();
+			if (osType == Platform.MAC) {
+				if (configuration.isShowIphotoLibrary()) {
+					DLNAResource iPhotoRes = getiPhotoFolder();
+					if (iPhotoRes != null) {
+						addChild(iPhotoRes);
 					}
-					if (configuration.isShowApertureLibrary()) {
-						DLNAResource apertureRes = getApertureFolder();
-						if (apertureRes != null) {
-							addChild(apertureRes);
-						}
+				}
+				if (configuration.isShowApertureLibrary()) {
+					DLNAResource apertureRes = getApertureFolder();
+					if (apertureRes != null) {
+						addChild(apertureRes);
 					}
-				case Platform.WINDOWS:
-					if (configuration.isShowItunesLibrary()) {
-						DLNAResource iTunesRes = getiTunesFolder();
-						if (iTunesRes != null) {
-							addChild(iTunesRes);
-						}
+				}
+			}
+			if (osType == Platform.MAC || osType == Platform.WINDOWS) {
+				if (configuration.isShowItunesLibrary()) {
+					DLNAResource iTunesRes = getiTunesFolder();
+					if (iTunesRes != null) {
+						addChild(iTunesRes);
 					}
+				}
 			}
 
 			if (configuration.isShowServerSettingsFolder()) {
@@ -231,37 +245,54 @@ public class RootFolder extends DLNAResource {
 		}
 	}
 
-	private IFrame frame = PMS.get().getFrame();
-
-	public void scan() {
+	public void startScan() {
 		if (!configuration.getUseCache()) {
 			throw new IllegalStateException("Can't scan when cache is disabled");
 		}
 		running = true;
+		GuiManager.setScanLibraryStatus(true, true);
 
 		if (!isDiscovered()) {
 			discoverChildren(false);
 		}
 
-		setDefaultRenderer(RendererConfiguration.getDefaultConf());
+		setDefaultRenderer(RendererConfigurations.getDefaultRenderer());
 		LOGGER.debug("Starting scan of: {}", this.getName());
-		scan(this);
-
-		// Running might have been set false during scan
 		if (running) {
-			PMS.get().getDatabase().cleanup();
+			Connection connection = null;
+			try {
+				connection = MediaDatabase.getConnectionIfAvailable();
+				if (connection != null) {
+					scan(this);
+					// Running might have been set false during scan
+					if (running) {
+						MediaTableFiles.cleanup(connection);
+					}
+				}
+			} finally {
+				MediaDatabase.close(connection);
+			}
+			running = false;
 		}
-		frame.setScanLibraryEnabled(true);
-		frame.setStatusLine(null);
+
+		GuiManager.setScanLibraryStatus(configuration.getUseCache(), false);
+		GuiManager.setStatusLine(null);
 	}
 
 	public void stopScan() {
-		running = false;
+		if (running) {
+			GuiManager.setScanLibraryStatus(false, true);
+			running = false;
+		}
 	}
 
 	public void scan(DLNAResource resource) {
 		if (running) {
 			for (DLNAResource child : resource.getChildren()) {
+				// wait until the realtime lock is released before starting
+				PMS.REALTIME_LOCK.lock();
+				PMS.REALTIME_LOCK.unlock();
+
 				if (running && child.allowScan()) {
 					child.setDefaultRenderer(resource.getDefaultRenderer());
 
@@ -269,13 +300,13 @@ public class RootFolder extends DLNAResource {
 					String childName = child.getName();
 					if (child instanceof RealFile) {
 						LOGGER.debug("Scanning folder: " + childName);
-						frame.setStatusLine(Messages.getString("DLNAMediaDatabase.4") + " " + childName);
+						GuiManager.setStatusLine(Messages.getString("ScanningFolder") + " " + childName);
 					}
 
 					if (child.isDiscovered()) {
 						child.refreshChildren();
 					} else {
-						if (child instanceof DVDISOFile || child instanceof DVDISOTitle) { // ugly hack
+						if (child instanceof DVDISOFile || child instanceof DVDISOTitle || child instanceof PlaylistFolder) { // ugly hack
 							child.syncResolve();
 						}
 						child.discoverChildren();
@@ -296,62 +327,8 @@ public class RootFolder extends DLNAResource {
 				}
 			}
 		} else {
-			frame.setScanLibraryEnabled(true);
+			GuiManager.setStatusLine(null);
 		}
-	}
-
-	@Nullable
-	private static Path getWindowsKnownFolder(GUID guid) {
-		try {
-			String folderPath = Shell32Util.getKnownFolderPath(guid);
-			if (isNotBlank(folderPath)) {
-				Path folder = Paths.get(folderPath);
-				try {
-					FilePermissions permissions = new FilePermissions(folder);
-					if (permissions.isBrowsable()) {
-						return folder;
-					}
-					LOGGER.warn("Insufficient permissions to read default folder \"{}\"", guid);
-				} catch (FileNotFoundException e) {
-					LOGGER.debug("Default folder \"{}\" not found", folder);
-				}
-			}
-		} catch (Win32Exception e) {
-			LOGGER.debug("Default folder \"{}\" not found: {}", guid, e.getMessage());
-		} catch (InvalidPathException e) {
-			LOGGER.error("Unexpected error while resolving default Windows folder with GUID {}: {}", guid, e.getMessage());
-			LOGGER.trace("", e);
-		}
-		return null;
-	}
-
-	@Nullable
-	private static Path getWindowsFolder(@Nullable CSIDL csidl) {
-		if (csidl == null) {
-			return null;
-		}
-		try {
-			String folderPath = Shell32Util.getFolderPath(csidl.getValue());
-			if (isNotBlank(folderPath)) {
-				Path folder = Paths.get(folderPath);
-				FilePermissions permissions;
-				try {
-					permissions = new FilePermissions(folder);
-					if (permissions.isBrowsable()) {
-						return folder;
-					}
-					LOGGER.warn("Insufficient permissions to read default folder \"{}\"", csidl);
-				} catch (FileNotFoundException e) {
-					LOGGER.debug("Default folder \"{}\" not found", folder);
-				}
-			}
-		} catch (Win32Exception e) {
-			LOGGER.debug("Default folder \"{}\" not found: {}", csidl, e.getMessage());
-		} catch (InvalidPathException e) {
-			LOGGER.error("Unexpected error while resolving default Windows folder with id {}: {}", csidl, e.getMessage());
-			LOGGER.trace("", e);
-		}
-		return null;
 	}
 
 	private static final Object DEFAULT_FOLDERS_LOCK = new Object();
@@ -370,294 +347,72 @@ public class RootFolder extends DLNAResource {
 		synchronized (DEFAULT_FOLDERS_LOCK) {
 			if (defaultFolders == null) {
 				// Lazy initialization
-				defaultFolders = new ArrayList<Path>();
-				if (Platform.isWindows()) {
-					Double version = BasicSystemUtils.instance.getWindowsVersion();
-					if (version != null && version >= 6d) {
-						ArrayList<GUID> knownFolders = new ArrayList<>(Arrays.asList(new GUID[]{
-							KnownFolders.FOLDERID_Music,
-							KnownFolders.FOLDERID_Pictures,
-							KnownFolders.FOLDERID_Videos,
-						}));
-						for (GUID guid : knownFolders) {
-							Path folder = getWindowsKnownFolder(guid);
-							if (folder != null) {
-								defaultFolders.add(folder);
-							}
-						}
-					} else {
-						CSIDL[] csidls = {
-							CSIDL.CSIDL_MYMUSIC,
-							CSIDL.CSIDL_MYPICTURES,
-							CSIDL.CSIDL_MYVIDEO
-						};
-						for (CSIDL csidl : csidls) {
-							Path folder = getWindowsFolder(csidl);
-							if (folder != null) {
-								defaultFolders.add(folder);
-							}
-						}
-					}
-				} else if (Platform.isMac()) {
-					defaultFolders.addAll(NSFoundation.nsSearchPathForDirectoriesInDomains(
-						NSSearchPathDirectory.NSMoviesDirectory,
-						NSSearchPathDomainMask.NSAllDomainsMask,
-						true
-					));
-					defaultFolders.addAll(NSFoundation.nsSearchPathForDirectoriesInDomains(
-						NSSearchPathDirectory.NSMusicDirectory,
-						NSSearchPathDomainMask.NSAllDomainsMask,
-						true
-					));
-					defaultFolders.addAll(NSFoundation.nsSearchPathForDirectoriesInDomains(
-						NSSearchPathDirectory.NSPicturesDirectory,
-						NSSearchPathDomainMask.NSAllDomainsMask,
-						true
-					));
-				} else {
-					defaultFolders.add(Paths.get("").toAbsolutePath());
-					String userHome = System.getProperty("user.home");
-					if (isNotBlank(userHome)) {
-						defaultFolders.add(Paths.get(userHome));
-					}
-					//TODO: (Nad) Implement xdg-user-dir for Linux when EnginesRegistration is merged:
-					// xdg-user-dir DESKTOP
-					// xdg-user-dir DOWNLOAD
-					// xdg-user-dir PUBLICSHARE
-					// xdg-user-dir MUSIC
-					// xdg-user-dir PICTURES
-					// xdg-user-dir VIDEOS
-				}
-				defaultFolders = Collections.unmodifiableList(defaultFolders);
+				defaultFolders = Collections.unmodifiableList(PlatformUtils.INSTANCE.getDefaultFolders());
 			}
 			return defaultFolders;
 		}
 	}
 
-	@Nonnull
-	private List<RealFile> getConfiguredFolders() {
+	private List<RealFile> getFolderContents() {
 		List<RealFile> resources = new ArrayList<>();
-		List<Path> folders = configuration.getSharedFolders();
-		List<Path> ignoredList = configuration.getIgnoredFolders();
+		List<SharedContent> sharedContents = SharedContentConfiguration.getSharedContentArray();
 
-		if (!ignoredList.isEmpty()) {
-			for (Iterator<Path> iterator = folders.iterator(); iterator.hasNext();) {
-				Path path = iterator.next();
-				if (ignoredList.contains(path)) {
-					iterator.remove();
-				}
+		for (SharedContent sharedContent : sharedContents) {
+			if (sharedContent instanceof FolderContent folder && folder.getFile() != null && folder.isActive()) {
+				resources.add(new RealFile(folder.getFile()));
 			}
 		}
 
-		for (Path folder : folders) {
-			resources.add(new RealFile(folder.toFile()));
-		}
-
 		if (configuration.getSearchFolder()) {
-			SearchFolder sf = new SearchFolder(Messages.getString("PMS.143"), new FileSearch(resources));
+			SearchFolder sf = new SearchFolder(Messages.getString("SearchDiscFolders"), new FileSearch(resources));
 			addChild(sf);
 		}
 
 		return resources;
 	}
 
-	private static List<DLNAResource> getVirtualFolders() {
-		List<DLNAResource> res = new ArrayList<>();
-		List<MapFileConfiguration> mapFileConfs = MapFileConfiguration.parseVirtualFolders();
-
-		if (mapFileConfs != null) {
-			for (MapFileConfiguration f : mapFileConfs) {
-				res.add(new MapFile(f));
+	private synchronized void setVirtualFolderContents() {
+		List<SharedContent> sharedContents = SharedContentConfiguration.getSharedContentArray();
+		for (SharedContent sharedContent : sharedContents) {
+			if (sharedContent instanceof VirtualFolderContent virtualFolder && virtualFolder.isActive()) {
+				DLNAResource parent = getSharedContentParent(virtualFolder.getParent());
+				parent.addChild(new VirtualFile(virtualFolder));
 			}
 		}
-
-		return res;
 	}
 
 	/**
-	 * Removes all web folders, re-parses the web config file, and adds a
-	 * file watcher for the file.
+	 * This update the external sources.
 	 */
-	public synchronized void loadWebConf() {
-		Integer currentlySelectedPosition = -1;
-
-		if (SharedContentTab.webContentList != null) {
-			currentlySelectedPosition = SharedContentTab.webContentList.getSelectedRow();
+	public synchronized void setExternalContents() {
+		if (!configuration.getExternalNetwork()) {
+			return;
 		}
-
-		for (DLNAResource d : webFolders) {
-			getChildren().remove(d);
-		}
-		webFolders.clear();
-		String webConfPath = configuration.getWebConfPath();
-		File webConf = new File(webConfPath);
-		if (!webConf.exists()) {
-			configuration.writeWebConfigurationFile();
-		}
-		if (
-			webConf.exists() &&
-			configuration.getExternalNetwork() &&
-			(
-				SharedContentTab.lastWebContentUpdate == 1L ||
-				SharedContentTab.lastWebContentUpdate < (System.currentTimeMillis() - 2000)
-			)
-		) {
-			/**
-			 * If the GUI last updated less than 2 seconds ago, chances are good
-			 * that this method was triggered by changes in the GUI, which means
-			 * we can skip updating the GUI here (avoiding the peakaboo effect)
-			 */
-			LOGGER.trace("The last web content update via GUI was more than 2 seconds ago, refreshing");
-			parseWebConf(webConf, currentlySelectedPosition);
-			FileWatcher.add(new FileWatcher.Watch(webConf.getPath(), ROOT_WATCHER, this, RELOAD_WEB_CONF));
-		}
-		setLastModified(1);
-	}
-
-	/**
-	 * This parses the web config and populates the virtual Web folder.
-	 *
-	 * @param webConf
-	 */
-	private synchronized void parseWebConf(File webConf, Integer currentlySelectedPosition) {
-		try {
-			try (LineNumberReader br = new LineNumberReader(new InputStreamReader(new FileInputStream(webConf), StandardCharsets.UTF_8))) {
-				String line;
-				while ((line = br.readLine()) != null) {
-					line = line.trim();
-
-					if (line.length() > 0 && !line.startsWith("#") && line.indexOf('=') > -1) {
-						String key = line.substring(0, line.indexOf('='));
-						String value = line.substring(line.indexOf('=') + 1);
-						String[] keys = parseFeedKey(key);
-						String sourceType = keys[0];
-						String folderName = keys[1] == null ? null : keys[1];
-
-						try {
-							if (
-								sourceType.equals("imagefeed") ||
-								sourceType.equals("audiofeed") ||
-								sourceType.equals("videofeed") ||
-								sourceType.equals("audiostream") ||
-								sourceType.equals("videostream")
-							) {
-								String[] values = parseFeedValue(value);
-								String uri = values[0];
-								DLNAResource parent = null;
-
-								if (folderName != null) {
-									StringTokenizer st = new StringTokenizer(folderName, ",");
-									DLNAResource currentRoot = this;
-
-									while (st.hasMoreTokens()) {
-										String folder = st.nextToken();
-										parent = currentRoot.searchByName(folder);
-
-										if (parent == null) {
-											parent = new VirtualFolder(folder, "");
-											if (currentRoot == this) {
-												// parent is a top-level web folder
-												webFolders.add(parent);
-											}
-											currentRoot.addChild(parent);
-										}
-
-										currentRoot = parent;
-									}
-								}
-
-								if (parent == null) {
-									parent = this;
-								}
-
-								// Handle web playlists
-								if (sourceType.endsWith("stream")) {
-									int type = sourceType.startsWith("audio") ? Format.AUDIO : Format.VIDEO;
-									DLNAResource playlist = PlaylistFolder.getPlaylist(uri, values[1], type);
-									if (playlist != null) {
-										parent.addChild(playlist);
-										continue;
-									}
-								}
-
-								String optionalStreamThumbnail = values.length > 2 ? values[2] : null;
-
-								switch (sourceType) {
-									case "imagefeed":
-										parent.addChild(new ImagesFeed(uri));
-										break;
-									case "videofeed":
-										// Convert YouTube channel URIs to their feed URIs
-										if (uri.contains("youtube.com/channel/")) {
-											uri = uri.replaceAll("youtube.com/channel/", "youtube.com/feeds/videos.xml?channel_id=");
-										}
-
-										parent.addChild(new VideosFeed(uri));
-										break;
-									case "audiofeed":
-										parent.addChild(new AudiosFeed(uri));
-										break;
-									case "audiostream":
-										parent.addChild(new WebAudioStream(uri, values[1], optionalStreamThumbnail));
-										break;
-									case "videostream":
-										parent.addChild(new WebVideoStream(uri, values[1], optionalStreamThumbnail));
-										break;
-									default:
-										break;
-								}
-							}
-						} catch (ArrayIndexOutOfBoundsException e) {
-							// catch exception here and go with parsing
-							LOGGER.info("Error at line " + br.getLineNumber() + " of WEB.conf: " + e.getMessage());
-							LOGGER.debug(null, e);
-						}
+		for (SharedContent sharedContent : SharedContentConfiguration.getSharedContentArray()) {
+			if (sharedContent instanceof SharedContentWithPath sharedContentWithPath && sharedContentWithPath.isExternalContent() && sharedContentWithPath.isActive()) {
+				DLNAResource parent = getSharedContentParent(sharedContentWithPath.getParent());
+				// Handle web playlists stream
+				if (sharedContent instanceof StreamContent streamContent) {
+					DLNAResource playlist = PlaylistFolder.getPlaylist(streamContent.getName(), streamContent.getUri(), streamContent.getFormat());
+					if (playlist != null) {
+						parent.addChild(playlist);
+						continue;
 					}
 				}
+				if (sharedContent instanceof FeedAudioContent feedAudioContent) {
+					parent.addChild(new AudiosFeed(feedAudioContent.getUri()));
+				} else if (sharedContent instanceof FeedImageContent feedImageContent) {
+					parent.addChild(new ImagesFeed(feedImageContent.getUri()));
+				} else if (sharedContent instanceof FeedVideoContent feedVideoContent) {
+					parent.addChild(new VideosFeed(feedVideoContent.getUri()));
+				} else if (sharedContent instanceof StreamAudioContent streamAudioContent) {
+					parent.addChild(new WebAudioStream(streamAudioContent.getName(), streamAudioContent.getUri(), streamAudioContent.getThumbnail()));
+				} else if (sharedContent instanceof StreamVideoContent streamVideoContent) {
+					parent.addChild(new WebVideoStream(streamVideoContent.getName(), streamVideoContent.getUri(), streamVideoContent.getThumbnail()));
+				}
 			}
-		} catch (FileNotFoundException e) {
-			LOGGER.debug("Can't read web configuration file {}", e.getMessage());
-		} catch (IOException e) {
-			LOGGER.warn("Unexpected error in WEB.conf: " + e.getMessage());
-			LOGGER.debug("", e);
-		} finally {
-			if (SharedContentTab.webContentList != null) {
-				SharedContentTab.setWebContentGUIFromWebConfFile(webConf, currentlySelectedPosition);
-			}
 		}
-	}
-
-	/**
-	 * Splits the first part of a WEB.conf spec into a pair of Strings
-	 * representing the resource type and its DLNA folder.
-	 *
-	 * @param spec (String) to be split
-	 * @return Array of (String) that represents the tokenized entry.
-	 */
-	public static String[] parseFeedKey(String spec) {
-		String[] pair = StringUtils.split(spec, ".", 2);
-
-		if (pair == null || pair.length < 2) {
-			pair = new String[2];
-		}
-
-		if (pair[0] == null) {
-			pair[0] = "";
-		}
-
-		return pair;
-	}
-
-	/**
-	 * Splits the second part of a WEB.conf spec into a triple of Strings
-	 * representing the DLNA path, resource URI, optional thumbnail URI
-	 * and name.
-	 *
-	 * @param spec (String) to be split
-	 * @return Array of (String) that represents the tokenized entry.
-	 */
-	public static String[] parseFeedValue(String spec) {
-		return spec.split(",");
+		setLastModified(1);
 	}
 
 	/**
@@ -672,7 +427,7 @@ public class RootFolder extends DLNAResource {
 
 		if (Platform.isMac()) {
 			LOGGER.debug("Adding iPhoto folder");
-			Process process = null;
+			Process process;
 			try {
 				// This command will show the XML files for recently opened iPhoto databases
 				process = Runtime.getRuntime().exec("defaults read com.apple.iApps iPhotoRecentDatabases");
@@ -749,7 +504,7 @@ public class RootFolder extends DLNAResource {
 
 	/**
 	 * Returns Aperture folder. Used by manageRoot, so it is usually used as
-	 * a folder at the root folder. Only works when DMS is run on Mac OS X.
+	 * a folder at the root folder. Only works when UMS is run on Mac OS X.
 	 * TODO: Requirements for Aperture.
 	 */
 	private DLNAResource getApertureFolder() {
@@ -794,20 +549,20 @@ public class RootFolder extends DLNAResource {
 
 					try {
 						process.getErrorStream().close();
-					} catch (Exception e) {
+					} catch (IOException e) {
 						LOGGER.warn("Could not close process output stream: {}", e.getMessage());
 						LOGGER.trace("", e);
 					}
 
 					try {
 						process.getInputStream().close();
-					} catch (Exception e) {
+					} catch (IOException e) {
 						LOGGER.warn("Could not close stream for output process", e);
 					}
 
 					try {
 						process.getOutputStream().close();
-					} catch (Exception e) {
+					} catch (IOException e) {
 						LOGGER.warn("Could not close stream for output process", e);
 					}
 				}
@@ -817,7 +572,7 @@ public class RootFolder extends DLNAResource {
 		return res;
 	}
 
-	private VirtualFolder createApertureDlnaLibrary(String url) throws UnsupportedEncodingException, MalformedURLException, XmlParseException, IOException, URISyntaxException {
+	private VirtualFolder createApertureDlnaLibrary(String url) throws XmlParseException, IOException, URISyntaxException {
 		VirtualFolder res = null;
 
 		if (url != null) {
@@ -917,59 +672,18 @@ public class RootFolder extends DLNAResource {
 	/**
 	 * Returns the iTunes XML file. This file has all the information of the
 	 * iTunes database. The methods used in this function depends on whether
-	 * DMS runs on Mac OS X or Windows.
+	 * UMS runs on Mac OS X or Windows.
 	 *
 	 * @return (String) Absolute path to the iTunes XML file.
 	 * @throws Exception
 	 */
 	private String getiTunesFile() throws Exception {
-		String line;
-		String iTunesFile = null;
 		String customUserPath = configuration.getItunesLibraryPath();
 
 		if (!"".equals(customUserPath)) {
 			return customUserPath;
 		}
-
-		if (Platform.isMac()) {
-			// the second line should contain a quoted file URL e.g.:
-			// "file://localhost/Users/MyUser/Music/iTunes/iTunes%20Music%20Library.xml"
-			Process process = Runtime.getRuntime().exec("defaults read com.apple.iApps iTunesRecentDatabases");
-			try (BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-				// we want the 2nd line
-				String line1 = in.readLine();
-				String line2 = in.readLine();
-				if (line1 != null && line2 != null) {
-					line = line2.trim(); // remove extra spaces
-					line = line.substring(1, line.length() - 1); // remove quotes and spaces
-					URI tURI = new URI(line);
-					iTunesFile = URLDecoder.decode(tURI.toURL().getFile(), "UTF8");
-				}
-			}
-		} else if (Platform.isWindows()) {
-			Process process = Runtime.getRuntime().exec("reg query \"HKCU\\Software\\Microsoft\\Windows\\CurrentVersion\\Explorer\\Shell Folders\" /v \"My Music\"");
-			String location;
-			//TODO The encoding of the output from reg query is unclear, this must be investigated further
-			try (BufferedReader in = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
-				location = null;
-				while ((line = in.readLine()) != null) {
-					final String lookFor = "REG_SZ";
-					if (line.contains(lookFor)) {
-						location = line.substring(line.indexOf(lookFor) + lookFor.length()).trim();
-					}
-				}
-			}
-
-			if (location != null) {
-				// Add the iTunes folder to the end
-				location += "\\iTunes\\iTunes Music Library.xml";
-				iTunesFile = location;
-			} else {
-				LOGGER.info("Could not find the My Music folder");
-			}
-		}
-
-		return iTunesFile;
+		return PlatformUtils.INSTANCE.getiTunesFile();
 	}
 
 	private static boolean areNamesEqual(String aThis, String aThat) {
@@ -1027,10 +741,10 @@ public class RootFolder extends DLNAResource {
 							VirtualFolder musicFolder = new VirtualFolder(playlist.get("Name").toString(), null);
 							res.addChild(musicFolder);
 
-							VirtualFolder virtualFolderArtists = new VirtualFolder(Messages.getString("FoldTab.50"), null);
-							VirtualFolder virtualFolderAlbums = new VirtualFolder(Messages.getString("FoldTab.51"), null);
-							VirtualFolder virtualFolderGenres = new VirtualFolder(Messages.getString("FoldTab.52"), null);
-							VirtualFolder virtualFolderAllTracks = new VirtualFolder(Messages.getString("PMS.11"), null);
+							VirtualFolder virtualFolderArtists = new VirtualFolder(Messages.getString("BrowseByArtist"), null);
+							VirtualFolder virtualFolderAlbums = new VirtualFolder(Messages.getString("BrowseByAlbum"), null);
+							VirtualFolder virtualFolderGenres = new VirtualFolder(Messages.getString("BrowseByGenre"), null);
+							VirtualFolder virtualFolderAllTracks = new VirtualFolder(Messages.getString("AllAudioTracks"), null);
 							playlistTracks = (List<?>) playlist.get("Playlist Items"); // list of tracks in a playlist
 
 							String artistName;
@@ -1052,7 +766,7 @@ public class RootFolder extends DLNAResource {
 										name = name.replace('.', '-');
 
 										if (track.containsKey("Protected") && track.get("Protected").equals(Boolean.TRUE)) {
-											name = String.format(Messages.getString("RootFolder.1"), name);
+											name = name + "-" + Messages.getString("Protected_lowercase");
 										}
 
 										boolean isCompilation = (track.containsKey("Compilation") && track.get("Compilation").equals(Boolean.TRUE));
@@ -1091,7 +805,7 @@ public class RootFolder extends DLNAResource {
 										genreName  = genreName.replace('\u0160', ' ').trim();
 
 										URI tURI2 = new URI(track.get("Location").toString());
-										File refFile = new File(URLDecoder.decode(tURI2.toURL().getFile(), "UTF-8"));
+										File refFile = new File(URLDecoder.decode(tURI2.toURL().getFile(), StandardCharsets.UTF_8));
 										RealFile file = new RealFile(refFile, name);
 
 										// Put the track into the artist's album folder and the artist's "All tracks" folder
@@ -1114,7 +828,7 @@ public class RootFolder extends DLNAResource {
 										if (individualArtistFolder == null) {
 											individualArtistFolder = new VirtualFolder(artistName, null);
 											virtualFolderArtists.addChild(individualArtistFolder);
-											individualArtistAllTracksFolder = new VirtualFolder(Messages.getString("PMS.11"), null);
+											individualArtistAllTracksFolder = new VirtualFolder(Messages.getString("AllAudioTracks"), null);
 											individualArtistFolder.addChild(individualArtistAllTracksFolder);
 										} else {
 											individualArtistAllTracksFolder = (VirtualFolder) individualArtistFolder.getChildren().get(0);
@@ -1172,31 +886,22 @@ public class RootFolder extends DLNAResource {
 							musicFolder.addChild(virtualFolderAllTracks);
 
 							// Sort the virtual folders alphabetically
-							Collections.sort(virtualFolderArtists.getChildren(), new Comparator<DLNAResource>() {
-								@Override
-								public int compare(DLNAResource o1, DLNAResource o2) {
-									VirtualFolder a = (VirtualFolder) o1;
-									VirtualFolder b = (VirtualFolder) o2;
-									return a.getName().compareToIgnoreCase(b.getName());
-								}
+							Collections.sort(virtualFolderArtists.getChildren(), (DLNAResource o1, DLNAResource o2) -> {
+								VirtualFolder a = (VirtualFolder) o1;
+								VirtualFolder b = (VirtualFolder) o2;
+								return a.getName().compareToIgnoreCase(b.getName());
 							});
 
-							Collections.sort(virtualFolderAlbums.getChildren(), new Comparator<DLNAResource>() {
-								@Override
-								public int compare(DLNAResource o1, DLNAResource o2) {
-									VirtualFolder a = (VirtualFolder) o1;
-									VirtualFolder b = (VirtualFolder) o2;
-									return a.getName().compareToIgnoreCase(b.getName());
-								}
+							Collections.sort(virtualFolderAlbums.getChildren(), (DLNAResource o1, DLNAResource o2) -> {
+								VirtualFolder a = (VirtualFolder) o1;
+								VirtualFolder b = (VirtualFolder) o2;
+								return a.getName().compareToIgnoreCase(b.getName());
 							});
 
-							Collections.sort(virtualFolderGenres.getChildren(), new Comparator<DLNAResource>() {
-								@Override
-								public int compare(DLNAResource o1, DLNAResource o2) {
-									VirtualFolder a = (VirtualFolder) o1;
-									VirtualFolder b = (VirtualFolder) o2;
-									return a.getName().compareToIgnoreCase(b.getName());
-								}
+							Collections.sort(virtualFolderGenres.getChildren(), (DLNAResource o1, DLNAResource o2) -> {
+								VirtualFolder a = (VirtualFolder) o1;
+								VirtualFolder b = (VirtualFolder) o2;
+								return a.getName().compareToIgnoreCase(b.getName());
 							});
 						} else {
 							// Add all playlists
@@ -1218,11 +923,11 @@ public class RootFolder extends DLNAResource {
 										name = name.replace('.', '-');
 
 										if (track.containsKey("Protected") && track.get("Protected").equals(Boolean.TRUE)) {
-											name = String.format(Messages.getString("RootFolder.1"), name);
+											name = name + "-" + Messages.getString("Protected_lowercase");
 										}
 
 										URI tURI2 = new URI(track.get("Location").toString());
-										RealFile file = new RealFile(new File(URLDecoder.decode(tURI2.toURL().getFile(), "UTF-8")), name);
+										RealFile file = new RealFile(new File(URLDecoder.decode(tURI2.toURL().getFile(), StandardCharsets.UTF_8)), name);
 										pf.addChild(file);
 									}
 								}
@@ -1254,7 +959,7 @@ public class RootFolder extends DLNAResource {
 	}
 
 	private void addAdminFolder() {
-		DLNAResource res = new VirtualFolder(Messages.getString("PMS.131"), null);
+		DLNAResource res = new VirtualFolder(Messages.getString("ServerSettings"), null);
 		DLNAResource vsf = getVideoSettingsFolder();
 
 		if (vsf != null) {
@@ -1265,22 +970,22 @@ public class RootFolder extends DLNAResource {
 			final File scriptDir = new File(configuration.getScriptDir());
 
 			if (scriptDir.exists()) {
-				res.addChild(new VirtualFolder(Messages.getString("PMS.132"), null) {
+				res.addChild(new VirtualFolder(Messages.getString("Scripts"), null) {
 					@Override
 					public void discoverChildren() {
 						File[] files = scriptDir.listFiles();
 						if (files != null) {
 							for (File file : files) {
-								String name = file.getName().replaceAll("_", " ");
-								int pos = name.lastIndexOf('.');
+								String childrenName = file.getName().replace("_", " ");
+								int pos = childrenName.lastIndexOf('.');
 
 								if (pos != -1) {
-									name = name.substring(0, pos);
+									childrenName = childrenName.substring(0, pos);
 								}
 
 								final File f = file;
 
-								addChild(new VirtualVideoAction(name, true) {
+								addChild(new VirtualVideoAction(childrenName, true, null) {
 									@Override
 									public boolean enable() {
 										try {
@@ -1305,11 +1010,11 @@ public class RootFolder extends DLNAResource {
 
 		// Resume file management
 		if (configuration.isResumeEnabled()) {
-			res.addChild(new VirtualFolder(Messages.getString("PMS.135"), null) {
+			res.addChild(new VirtualFolder(Messages.getString("ManageResumeFiles"), null) {
 				@Override
 				public void discoverChildren() {
 					final File[] files = ResumeObj.resumeFiles();
-					addChild(new VirtualVideoAction(Messages.getString("PMS.136"), true) {
+					addChild(new VirtualVideoAction(Messages.getString("DeleteAllFiles"), true, null) {
 						@Override
 						public boolean enable() {
 							for (File f : files) {
@@ -1320,9 +1025,9 @@ public class RootFolder extends DLNAResource {
 						}
 					});
 					for (final File f : files) {
-						String name = FileUtil.getFileNameWithoutExtension(f.getName());
-						name = name.replaceAll(ResumeObj.CLEAN_REG, "");
-						addChild(new VirtualVideoAction(name, false) {
+						String childrenName = FileUtil.getFileNameWithoutExtension(f.getName());
+						childrenName = childrenName.replaceAll(ResumeObj.CLEAN_REG, "");
+						addChild(new VirtualVideoAction(childrenName, false, null) {
 							@Override
 							public boolean enable() {
 								f.delete();
@@ -1335,12 +1040,22 @@ public class RootFolder extends DLNAResource {
 			});
 		}
 
-		// Reboot DMS
-		res.addChild(new VirtualVideoAction(Messages.getString("PMS.149"), true) {
+		// Restart UMS
+		res.addChild(new VirtualVideoAction(Messages.getString("RestartUms"), true, "images/icon-videothumbnail-restart.png") {
 			@Override
 			public boolean enable() {
 				ProcessUtil.reboot();
 				// Reboot failed if we get here
+				return false;
+			}
+		});
+
+		// Shut down computer
+		res.addChild(new VirtualVideoAction(Messages.getString("ShutDownComputer"), true, "images/icon-videothumbnail-shutdown.png") {
+			@Override
+			public boolean enable() {
+				ProcessUtil.shutDownComputer();
+				// Shutdown failed if we get here
 				return false;
 			}
 		});
@@ -1357,14 +1072,14 @@ public class RootFolder extends DLNAResource {
 		DLNAResource res = null;
 
 		if (configuration.isShowServerSettingsFolder()) {
-			res = new VirtualFolder(Messages.getString("PMS.37"), null);
-			VirtualFolder vfSub = new VirtualFolder(Messages.getString("PMS.8"), null);
+			res = new VirtualFolder(Messages.getString("VideoSettings_FolderName"), null);
+			VirtualFolder vfSub = new VirtualFolder(Messages.getString("Subtitles"), null);
 			res.addChild(vfSub);
 
 			if (configuration.useCode() && !PMS.get().masterCodeValid() &&
 				StringUtils.isNotEmpty(PMS.get().codeDb().lookup(CodeDb.MASTER))) {
 				// if the master code is valid we don't add this
-				VirtualVideoAction vva = new VirtualVideoAction("MasterCode", true) {
+				VirtualVideoAction vva = new VirtualVideoAction("MasterCode", true, null) {
 					@Override
 					public boolean enable() {
 						CodeEnter ce = (CodeEnter) getParent();
@@ -1380,7 +1095,7 @@ public class RootFolder extends DLNAResource {
 				res.addChild(ce1);
 			}
 
-			res.addChild(new VirtualVideoAction(Messages.getString("PMS.3"), configuration.isMencoderNoOutOfSync()) {
+			res.addChild(new VirtualVideoAction(Messages.getString("AvSyncAlternativeMethod"), configuration.isMencoderNoOutOfSync(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setMencoderNoOutOfSync(!configuration.isMencoderNoOutOfSync());
@@ -1388,7 +1103,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("PMS.14"), configuration.isMencoderMuxWhenCompatible()) {
+			res.addChild(new VirtualVideoAction(Messages.getString("DefaultH264RemuxMencoder"), configuration.isMencoderMuxWhenCompatible(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setMencoderMuxWhenCompatible(!configuration.isMencoderMuxWhenCompatible());
@@ -1397,7 +1112,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction("  !!-- Fix 23.976/25fps A/V Mismatch --!!", configuration.isFix25FPSAvMismatch()) {
+			res.addChild(new VirtualVideoAction("  !!-- Fix 23.976/25fps A/V Mismatch --!!", configuration.isFix25FPSAvMismatch(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setMencoderForceFps(!configuration.isFix25FPSAvMismatch());
@@ -1406,7 +1121,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("PMS.4"), configuration.isMencoderYadif()) {
+			res.addChild(new VirtualVideoAction(Messages.getString("DeinterlaceFilter"), configuration.isMencoderYadif(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setMencoderYadif(!configuration.isMencoderYadif());
@@ -1415,7 +1130,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			vfSub.addChild(new VirtualVideoAction(Messages.getString("TrTab2.51"), configuration.isDisableSubtitles()) {
+			vfSub.addChild(new VirtualVideoAction(Messages.getString("DisableSubtitles"), configuration.isDisableSubtitles(), null) {
 				@Override
 				public boolean enable() {
 					boolean oldValue = configuration.isDisableSubtitles();
@@ -1425,7 +1140,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			vfSub.addChild(new VirtualVideoAction(Messages.getString("MEncoderVideo.22"), configuration.isAutoloadExternalSubtitles()) {
+			vfSub.addChild(new VirtualVideoAction(Messages.getString("AutomaticallyLoadSrtSubtitles"), configuration.isAutoloadExternalSubtitles(), null) {
 				@Override
 				public boolean enable() {
 					boolean oldValue = configuration.isAutoloadExternalSubtitles();
@@ -1435,7 +1150,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			vfSub.addChild(new VirtualVideoAction(Messages.getString("MEncoderVideo.36"), configuration.isUseEmbeddedSubtitlesStyle()) {
+			vfSub.addChild(new VirtualVideoAction(Messages.getString("UseEmbeddedStyle"), configuration.isUseEmbeddedSubtitlesStyle(), null) {
 				@Override
 				public boolean enable() {
 					boolean oldValue = configuration.isUseEmbeddedSubtitlesStyle();
@@ -1445,7 +1160,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("MEncoderVideo.0"), configuration.getSkipLoopFilterEnabled()) {
+			res.addChild(new VirtualVideoAction(Messages.getString("SkipLoopFilterDeblocking"), configuration.getSkipLoopFilterEnabled(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setSkipLoopFilterEnabled(!configuration.getSkipLoopFilterEnabled());
@@ -1453,7 +1168,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("TrTab2.28"), configuration.isAudioEmbedDtsInPcm()) {
+			res.addChild(new VirtualVideoAction(Messages.getString("KeepDtsTracks"), configuration.isAudioEmbedDtsInPcm(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setAudioEmbedDtsInPcm(!configuration.isAudioEmbedDtsInPcm());
@@ -1461,7 +1176,7 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("PMS.27"), true) {
+			res.addChild(new VirtualVideoAction(Messages.getString("SaveConfiguration"), true, null) {
 				@Override
 				public boolean enable() {
 					try {
@@ -1473,15 +1188,15 @@ public class RootFolder extends DLNAResource {
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("LooksFrame.12"), true) {
+			res.addChild(new VirtualVideoAction(Messages.getString("RestartServer"), true, null) {
 				@Override
 				public boolean enable() {
-					PMS.get().reset();
+					PMS.get().resetMediaServer();
 					return true;
 				}
 			});
 
-			res.addChild(new VirtualVideoAction(Messages.getString("FoldTab.ShowLiveSubtitlesFolder"), configuration.isShowLiveSubtitlesFolder()) {
+			res.addChild(new VirtualVideoAction(Messages.getString("ShowLiveSubtitlesFolder"), configuration.isShowLiveSubtitlesFolder(), null) {
 				@Override
 				public boolean enable() {
 					configuration.setShowLiveSubtitlesFolder(configuration.isShowLiveSubtitlesFolder());
@@ -1508,33 +1223,16 @@ public class RootFolder extends DLNAResource {
 		}
 	}
 
-	// Automatic reloading
-
-	public final static int RELOAD_WEB_CONF = 1;
-
-	public static final FileWatcher.Listener ROOT_WATCHER = new FileWatcher.Listener() {
-		@Override
-		public void notify(String filename, String event, FileWatcher.Watch watch, boolean isDir) {
-			RootFolder r = (RootFolder) watch.getItem();
-			if (r != null) {
-				if (watch.flag == RELOAD_WEB_CONF) {
-					r.loadWebConf();
-				}
-			}
-		}
-	};
-
 	/**
-	 * Adds and removes files from the database when they are created or
+	 * Adds and removes files from the database when they are created, modified or
 	 * deleted on the hard drive.
 	 */
-	public static final FileWatcher.Listener LIBRARY_RESCANNER = new FileWatcher.Listener() {
-		@Override
-		public void notify(String filename, String event, FileWatcher.Watch watch, boolean isDir) {
-			if (("ENTRY_DELETE".equals(event) || "ENTRY_CREATE".equals(event)) && PMS.getConfiguration().getUseCache()) {
-				DLNAMediaDatabase database = PMS.get().getDatabase();
-
-				if (database != null) {
+	public static final FileWatcher.Listener LIBRARY_RESCANNER = (String filename, String event, FileWatcher.Watch watch, boolean isDir) -> {
+		if (("ENTRY_DELETE".equals(event) || "ENTRY_CREATE".equals(event) || "ENTRY_MODIFY".equals(event)) && PMS.getConfiguration().getUseCache()) {
+			Connection connection = null;
+			try {
+				connection = MediaDatabase.getConnectionIfAvailable();
+				if (connection != null) {
 					/**
 					 * If a new directory is created with files, the listener may not
 					 * give us information about those new files, as it wasn't listening
@@ -1543,7 +1241,6 @@ public class RootFolder extends DLNAResource {
 					if (isDir) {
 						if ("ENTRY_CREATE".equals(event)) {
 							LOGGER.trace("Folder {} was created on the hard drive", filename);
-
 							File[] files = new File(filename).listFiles();
 							if (files != null) {
 								LOGGER.trace("Crawling {}", filename);
@@ -1558,21 +1255,23 @@ public class RootFolder extends DLNAResource {
 							}
 						} else if ("ENTRY_DELETE".equals(event)) {
 							LOGGER.trace("Folder {} was deleted or moved on the hard drive, removing all files within it from the database", filename);
-							PMS.get().getDatabase().removeMediaEntriesInFolder(filename);
+							MediaTableFiles.removeMediaEntriesInFolder(connection, filename);
 							bumpSystemUpdateId();
 						}
 					} else {
 						if ("ENTRY_DELETE".equals(event)) {
 							LOGGER.trace("File {} was deleted or moved on the hard drive, removing it from the database", filename);
-							PMS.get().getDatabase().removeMediaEntry(filename);
+							MediaTableFiles.removeMediaEntry(connection, filename, true);
 							bumpSystemUpdateId();
-						} else if ("ENTRY_CREATE".equals(event)) {
+						} else {
 							LOGGER.trace("File {} was created on the hard drive", filename);
 							File file = new File(filename);
 							parseFileForDatabase(file);
 						}
 					}
 				}
+			} finally {
+				MediaDatabase.close(connection);
 			}
 		}
 	};
@@ -1584,15 +1283,25 @@ public class RootFolder extends DLNAResource {
 	 * @param file the file to parse
 	 */
 	public static final void parseFileForDatabase(File file) {
-		if (!MapFile.isPotentialMediaFile(file.getAbsolutePath())) {
+		if (!VirtualFile.isPotentialMediaFile(file.getAbsolutePath())) {
 			LOGGER.trace("Not parsing file that can't be media");
+			return;
+		}
+
+		if (!file.exists()) {
+			LOGGER.trace("Not parsing file that no longer exists");
+			return;
+		}
+
+		if (FileUtil.isLocked(file)) {
+			LOGGER.debug("File will not be parsed because it is open in another process");
 			return;
 		}
 
 		// TODO: Can this use UnattachedFolder and add instead?
 		RealFile rf = new RealFile(file);
 		rf.setParent(rf);
-		rf.getParent().setDefaultRenderer(RendererConfiguration.getDefaultConf());
+		rf.getParent().setDefaultRenderer(RendererConfigurations.getDefaultRenderer());
 		rf.resolveFormat();
 		rf.syncResolve();
 
@@ -1625,19 +1334,19 @@ public class RootFolder extends DLNAResource {
 	 */
 	public static void rescanLibraryFileOrFolder(String filename) {
 		if (
-			hasSameBasePath(PMS.getConfiguration().getSharedFolders(), filename) ||
+			hasSameBasePathFromFiles(SharedContentConfiguration.getSharedFolders(), filename) ||
 			hasSameBasePath(RootFolder.getDefaultFolders(), filename)
 		) {
 			LOGGER.debug("rescanning file or folder : " + filename);
 
-			if (!PMS.get().getDatabase().isScanLibraryRunning()) {
+			if (!LibraryScanner.isScanLibraryRunning()) {
 				Runnable scan = () -> {
 					File file = new File(filename);
 					if (file.isFile()) {
 						file = file.getParentFile();
 					}
 					DLNAResource dir = new RealFile(file);
-					dir.setDefaultRenderer(RendererConfiguration.getDefaultConf());
+					dir.setDefaultRenderer(RendererConfigurations.getDefaultRenderer());
 					dir.doRefreshChildren();
 					PMS.get().getRootFolder(null).scan(dir);
 				};
@@ -1649,9 +1358,18 @@ public class RootFolder extends DLNAResource {
 		}
 	}
 
-	public static boolean hasSameBasePath(List<Path> dirs, String content) {
+	public static boolean hasSameBasePath(List<Path> dirs, String filename) {
 		for (Path path : dirs) {
-			if (content.startsWith(path.toString())) {
+			if (filename.startsWith(path.toString())) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	public static boolean hasSameBasePathFromFiles(List<File> dirs, String filename) {
+		for (File file : dirs) {
+			if (filename.startsWith(file.getAbsolutePath())) {
 				return true;
 			}
 		}
